--- a/game.html
+++ b/game.html
@@ -11,6 +11,7 @@
 <script src="js/GraphicsCommon.js"></script>
 <script src="js/ImageLoading.js"></script>
 <script src="js/Player.js"></script>
+<script src="js/Audio.js"></script>
 <script src="js/ball.js"></script>
 <script src="js/Input.js"></script>
 <script src="js/Main.js"></script>
