gamepad support implemented

--- a/game.html
+++ b/game.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
 </head>
 
 <body>
-<canvas id="gameCanvas" width="800" height="600"></canvas>
+	<canvas id="gameCanvas" width="800" height="600"></canvas>
 
-<script src="js/GraphicsCommon.js"></script>
-<script src="js/ImageLoading.js"></script>
-<script src="js/Player.js"></script>
-<script src="js/Audio.js"></script>
-<script src="js/ball.js"></script>
-<script src="js/Input.js"></script>
-<script src="js/Main.js"></script>
+	<script src="js/GraphicsCommon.js"></script>
+	<script src="js/ImageLoading.js"></script>
+	<script src="js/Player.js"></script>
+	<script src="js/Audio.js"></script>
+	<script src="js/ball.js"></script>
+	<script src="js/Input.js"></script>
+	<script src="js/GamepadSupport.js"></script>
+	<script src="js/Main.js"></script>
 
 </body>
+
 </html>
