particle system added to main html

--- a/game.html
+++ b/game.html
@@ -16,6 +16,7 @@
 	<script src="js/ball.js"></script>
 	<script src="js/Input.js"></script>
 	<script src="js/GamepadSupport.js"></script>
+	<script src="js/ParticleSystem.js"></script>
 	<script src="js/Main.js"></script>
 
 </body>
