particles added to game after merge conflicts resolved

--- a/game.html
+++ b/game.html
@@ -17,6 +17,7 @@
 	<script src="js/Input.js"></script>
 	<script src="js/GamepadSupport.js"></script>
 	<script src="js/ParticleSystem.js"></script>
+	<script src="js/DrawGrid.js"></script>
 	<script src="js/Main.js"></script>
 
 </body>
