drawGrid() was replaced by drawZones() within Zones.js

--- a/game.html
+++ b/game.html
@@ -19,6 +19,7 @@
 	<script src="js/ParticleSystem.js"></script>
 	<script src="js/DrawGrid.js"></script>
 	<script src="js/Main.js"></script>
+	<script src="js/Zones.js"></script>
 
 </body>
 
