Scoreboard without timer

--- a/game.html
+++ b/game.html
@@ -18,6 +18,7 @@
 	<script src="js/GamepadSupport.js"></script>
 	<script src="js/ParticleSystem.js"></script>
 	<script src="js/DrawGrid.js"></script>
+	<script src="js/Scoreboard.js"></script>
 	<script src="js/Main.js"></script>
 	<script src="js/Zones.js"></script>
 
