Added Google Font Fjalla One. Created override function for colorText to include textSize in params, Adjusted main menu start text.

--- a/game.html
+++ b/game.html
@@ -4,6 +4,15 @@
 <head>
 	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
+
+	<!-- Font used for Main Menu screen -->
+	<link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
+	<style type="text/css">
+        @font-face {
+            font-family: 'Fjalla One', sans-serif;
+			src: url("https://fonts.googleapis.com/css?family=Fjalla+One"),
+        }
+	</style>
 </head>
 
 <body>
