--- a/index.html
+++ b/index.html
@@ -16,7 +16,19 @@
 </head>
 
 <body>
-	<canvas id="gameCanvas" width="1152" height="720"></canvas>
+	<canvas id="gameCanvas" width="1152" height="720" 
+		style="padding: 0;
+			outline: 0;
+			image-rendering: pixelated;
+			-ms-interpolation-mode: nearest-neighbor;
+			image-rendering: -webkit-optimize-contrast;
+			image-rendering: -webkit-crisp-edges;
+			image-rendering: -moz-crisp-edges;
+			image-rendering: -o-crisp-edges;
+			image-rendering: pixelated;
+			margin: 0 auto;
+			display: block;">
+	</canvas>
 
 	<script src="js/GraphicsCommon.js"></script>
 	<script src="js/ImageLoading.js"></script>
