Reduced zone alpha so that court markings are visible
And added a title tag to index.html

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 	<!-- Font used for Main Menu screen -->
 	<link href="https://fonts.googleapis.com/css?family=Fjalla+One" rel="stylesheet">
 	<style type="text/css">
-        @font-face {
-            font-family: 'Fjalla One', sans-serif;
+		@font-face {
+			font-family: 'Fjalla One', sans-serif;
 			src: url("https://fonts.googleapis.com/css?family=Fjalla+One"),
-        }
+		}
 	</style>
+	<title>In The Zone</title>
 </head>
 
 <body>
-	<canvas id="gameCanvas" width="1152" height="720" 
-		style="padding: 0;
+	<canvas id="gameCanvas" width="1152" height="720" style="padding: 0;
 			outline: 0;
 			image-rendering: pixelated;
 			-ms-interpolation-mode: nearest-neighbor;
